bug z-index sur la nav + store articles + realisations

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -9,7 +9,7 @@
   }
   nav{
     min-width: 100%;
-    z-index: 15;
+    z-index: 25;
   }
   .fade-in {
     opacity: 1;
